# cryptoswap-wallet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  lychee.toml  pyproject.toml
.githooks/: pre-push
.github/workflows/: integration.yml  linkcheck.yml  publish.yml  release.yml  tests.yml
docs/: TODO.md  code-review-2026-06-29.md  code-review-2026-06-30.md  core-review-2.md  core-review.md  dash.md  monero.md
src/cryptoswap/: __init__.py  cli.py  keystore.py  liquidity.py  swap.py  thorchain.py  verify.py
src/cryptoswap/chains/: base.py  btc.py  coins.py  eth.py  scan.py  tron.py
src/cryptoswap_wallet/: addresses.py  backends.py  cli.py  keystore.py  pricefeed.py  swap.py  thorchain.py  verify.py
src/cryptoswap_wallet/chains/: base.py  bsc.py  btc.py  coins.py  eth.py  tron.py
tests/: test_addresses.py  test_backends.py  test_balance.py  test_bsc.py  test_btc_adapter.py  test_btc_coins.py  test_cli.py  test_eth.py  test_integration_testnet.py  test_integration_thorchain.py  test_keystore.py  test_liquidity.py  test_pricefeed.py  test_scan.py  test_swap.py  test_thorchain.py  test_tron.py  test_verify.py
